Update docs description.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: colors-core
 site_author: nekitdev
-site_description: ...
+site_description: Core color functionality.
 
 repo_name: nekitdev/colors-core
 repo_url: https://github.com/nekitdev/colors-core
