--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "colors-core"
-version = "1.0.1"
+version = "1.1.0"
 description = "Core color functionality."
 authors = ["nekitdev"]
 license = "MIT"
@@ -11,7 +11,7 @@ homepage = "https://github.com/nekitdev/colors-core"
 repository = "https://github.com/nekitdev/colors-core"
 documentation = "https://nekitdev.github.io/colors-core"
 
-keywords = ["python", "color", "core"]
+keywords = ["python", "color"]
 
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -22,61 +22,48 @@ classifiers = [
 ]
 
 [tool.poetry.urls]
-Discord = "https://nekit.dev/discord"
-Funding = "https://patreon.com/nekitdev"
+Chat = "https://nekit.dev/chat"
+Funding = "https://nekit.dev/funding"
 Issues = "https://github.com/nekitdev/colors-core/issues"
 
 [[tool.poetry.packages]]
 include = "colors"
 
 [tool.poetry.dependencies]
-python = ">= 3.7"
-
-attrs = ">= 23.1.0"
-
-[tool.poetry.group.format]
-optional = true
-
-[tool.poetry.group.format.dependencies]
-black = "23.3.0"
-
-[tool.poetry.group.format.dependencies.isort]
-version = "5.12.0"
 python = ">= 3.8"
 
-[tool.poetry.group.check]
-optional = true
+attrs = "^23.2.0"
+
+[tool.poetry.group.format.dependencies]
+ruff = "0.2.2"
 
 [tool.poetry.group.check.dependencies]
-mypy = "1.3.0"
-
-[tool.poetry.group.test]
-optional = true
+mypy = "1.8.0"
 
 [tool.poetry.group.test.dependencies]
-pytest = "7.3.1"
-pytest-cov = "4.0.0"
+coverage = "7.4.3"
+pytest = "8.0.2"
+pytest-cov = "4.1.0"
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "1.4.3"
-mkdocs-material = "9.1.14"
+mkdocs = "1.5.3"
+mkdocs-material = "9.5.11"
 
 [tool.poetry.group.docs.dependencies.mkdocstrings]
-version = "0.21.2"
+version = "0.24.0"
 extras = ["python"]
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.release]
+optional = true
+
+[tool.poetry.group.release.dependencies]
 changelogging = "1.3.0"
 
-[tool.black]
-line_length = 100
-
-[tool.isort]
-line_length = 100
-profile = "black"
+[tool.ruff]
+line-length = 100
 
 [tool.pytest.ini_options]
 addopts = "--cov colors"
@@ -102,33 +89,11 @@ exclude_lines = [
 directory = "coverage"
 
 [tool.mypy]
-show_column_numbers = true
-
-disallow_any_decorated = true
-disallow_any_generics = true
-warn_return_any = true
-
-no_implicit_optional = true
-strict_optional = true
-
-strict_equality = true
-
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_untyped_decorators = true
-disallow_untyped_globals = true
-
-disallow_incomplete_defs = true
-
-warn_no_return = true
-warn_unreachable = true
-
-warn_redundant_casts = true
-warn_unused_ignores = false  # compatibility
+strict = true
 
 [tool.changelogging]
 name = "colors-core"
-version = "1.0.1"
+version = "1.1.0"
 url = "https://github.com/nekitdev/colors-core"
 directory = "changes"
 output = "CHANGELOG.md"
@@ -145,5 +110,5 @@ wrap_size = 100
 display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]
 
 [build-system]
-requires = ["poetry-core >= 1.5.2"]
+requires = ["poetry-core >= 1.9.0"]
 build-backend = "poetry.core.masonry.api"
