--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "colors-core"
-version = "1.1.0"
+version = "1.1.1"
 description = "Core color functionality."
 authors = ["nekitdev"]
 license = "MIT"
@@ -32,7 +32,7 @@ include = "colors"
 [tool.poetry.dependencies]
 python = ">= 3.8"
 
-attrs = "^23.2.0"
+attrs = ">= 23.2.0"
 
 [tool.poetry.group.format.dependencies]
 ruff = "0.2.2"
@@ -60,7 +60,7 @@ extras = ["python"]
 optional = true
 
 [tool.poetry.group.release.dependencies]
-changelogging = "1.3.0"
+changelogging = "1.4.1"
 
 [tool.ruff]
 line-length = 100
@@ -93,7 +93,7 @@ strict = true
 
 [tool.changelogging]
 name = "colors-core"
-version = "1.1.0"
+version = "1.1.1"
 url = "https://github.com/nekitdev/colors-core"
 directory = "changes"
 output = "CHANGELOG.md"
